<resources>
    <string name="app_name">Final Assignment Phonebook</string>
    <string name="add_new_contact_in_phonebook">ADD NEW CONTACT IN PHONEBOOK</string>
    <string name="first_name">First Name</string>
    <string name="enter_the_first_name">Enter the First name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_the_last_name">Enter the Last name</string>
    <string name="address">Address</string>
    <string name="enter_the_address">Enter the Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_the_phonenumber">Enter the PhoneNumber</string>
    <string name="add_contact">Add Contact</string>
    <string name="view_contacts">View Contacts</string>
</resources>
