<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvname"
        android:layout_width="86dp"
        android:layout_height="34dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="69dp"
        android:text="@string/first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvlastname"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="68dp"
        android:text="@string/last_name"
        app:layout_constraintStart_toEndOf="@+id/tvname"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="204dp"
        android:layout_height="31dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="19dp"
        android:text="@string/phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvname" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="225dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="545dp"
        android:text="@string/address"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber" />
</androidx.constraintlayout.widget.ConstraintLayout>
